# Voyis

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md
apps/data_logger/: CMakeLists.txt  data_logger.cpp  data_logger.hpp  main.cpp
apps/feature_extractor/: CMakeLists.txt  feature_extractor.cpp  feature_extractor.hpp  main.cpp
apps/image_generator/: CMakeLists.txt  image_generator.cpp  image_generator.hpp  main.cpp
common/: CMakeLists.txt
common/include/: ipc_manager.hpp  message_types.hpp  serialization.hpp
common/src/: ipc_manager.cpp  serialization.cpp
docs/: DESIGN.md
include/: ipc.h  message.h
scripts/: build.sh  generate_test_images.sh  run_all.sh
src/common/: CMakeLists.txt  ipc.cpp  message.cpp
src/data_logger/: CMakeLists.txt  main.cpp
src/feature_extractor/: CMakeLists.txt  main.cpp
src/image_generator/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_ipc.cpp  test_message.cpp
tests/integration/: test_integration.cpp
tests/unit/: test_ipc.cpp  test_serialization.cpp
